--- a/estructuras_de_contro_l3147912/estructuras_de_contro_l3147912.csproj
+++ b/estructuras_de_contro_l3147912/estructuras_de_contro_l3147912.csproj
@@ -43,8 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auto.cs" />
+    <Compile Include="Biblioteca.cs" />
+    <Compile Include="CamionAlcohol.cs" />
+    <Compile Include="CentralDistribucion.cs" />
+    <Compile Include="Conductor.cs" />
+    <Compile Include="Empleado.cs" />
+    <Compile Include="EmpleadoTikTok.cs" />
+    <Compile Include="Estudiante.cs" />
+    <Compile Include="Libro.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TikTok.cs" />
+    <Compile Include="Universidad.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
